# mensa-swfr-rs

./: Cargo.toml
src/: error.rs  lib.rs  mensa.rs
