[package]
name = "mensa-swfr-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1"
quick-xml = { version = "^0", features = [ "serialize" ] }
serde = { version = "^1", features = ["derive"] }
reqwest = "^0"
humantime = "^2"
tokio = { version = "^1", features = ["full", "time"] }
chrono = "^0"
strum = "^0"
strum_macros = "^0"
